<resources>
    <string name="app_name">FamilyMapClient</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!--    Strings related to menu-->
    <string name="fileMenu">File</string>
    <string name="fileMenuSelectedMessage">You selected the file menu.</string>
    <string name="settingsMenu">Person</string>
    <string name="personMenuSelectedMessage">You selected the person menu.</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="server_host">Server Host:</string>
    <string name="register">Register</string>
    <string name="server_port">Server Port:</string>
    <string name="user_name">User Name:</string>
    <string name="password">Password:</string>
    <string name="first_name_colon">First Name:</string>
    <string name="last_name_colon">Last Name:</string>
    <string name="email">Email:</string>
    <string name="gender_colon">Gender:</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="defaultServerHost">10.0.2.2</string>
    <string name="defaultServerPort">8080</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="mapFragmentMessage">Welcome to Google Maps:)</string>
    <string name="searchMenu">Search</string>
    <string name="defaultInfoPanelText">Click on a marker to see event details</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender</string>
    <string name="eventsTitle">Life Events</string>
    <string name="peopleTitle">Family</string>
    <string name="child">Child</string>
    <string name="mother">Mother</string>
    <string name="father">Father</string>
    <string name="spouse">Spouse</string>
    <string name="group_title">Group Title</string>
    <string name="life_story_lines">Life Story Lines</string>
    <string name="show_life_story_lines">Show life story lines</string>
    <string name="family_tree_lines">Family Tree Lines</string>
    <string name="show_family_tree_lines">Show family tree lines</string>
    <string name="spouse_lines">Spouse Lines</string>
    <string name="show_spouse_lines">Show Spouse Lines</string>
    <string name="paternal_filter_descr">Filter by father\'s side of family</string>
    <string name="father_s_side">Father\'s Side</string>
    <string name="mother_s_side">Mother\'s Side</string>
    <string name="maternal_filter_descr">Filter by mother\'s side of family</string>
    <string name="male_events">Male Events</string>
    <string name="filter_events_based_on_gender">Filter events based on gender</string>
    <string name="female_events">Female Events</string>
    <string name="logout">Logout</string>
    <string name="return_to_login_screen">Return to login screen</string>
</resources>