<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="UseSwitchCompatOrMaterialXML"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.SettingsActivity">

    <RelativeLayout
        android:layout_margin="@dimen/setting_item_margin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_item_height"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/life_story_lines"
                android:textSize="@dimen/setting_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_life_story_lines"
                android:textAllCaps="true"
                android:textSize="@dimen/setting_subtitle_text_size" />

        </LinearLayout>

            <Switch
                android:id="@+id/lifeStoryLinesSetting"
                android:layout_width="@dimen/setting_switch_width"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_margin="@dimen/setting_item_margin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_item_height"
        android:gravity="center_vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/family_tree_lines"
                android:textSize="@dimen/setting_text_size" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_family_tree_lines"
                android:textAllCaps="true"
                android:textSize="@dimen/setting_subtitle_text_size" />
        </LinearLayout>
        <Switch
            android:id="@+id/familyTreeLinesSetting"
            android:layout_width="@dimen/setting_switch_width"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_margin="@dimen/setting_item_margin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_item_height"
        android:gravity="center_vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spouse_lines"
                android:textSize="@dimen/setting_text_size" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_spouse_lines"
                android:textAllCaps="true"
                android:textSize="@dimen/setting_subtitle_text_size" />
        </LinearLayout>
        <Switch
            android:id="@+id/spouseLinesSetting"
            android:layout_width="@dimen/setting_switch_width"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_margin="@dimen/setting_item_margin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_item_height"
        android:gravity="center_vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/father_s_side"
                android:textSize="@dimen/setting_text_size" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paternal_filter_descr"
                android:textAllCaps="true"
                android:textSize="@dimen/setting_subtitle_text_size" />
        </LinearLayout>
        <Switch
            android:id="@+id/fatherSideSetting"
            android:layout_width="@dimen/setting_switch_width"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_margin="@dimen/setting_item_margin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_item_height"
        android:gravity="center_vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mother_s_side"
                android:textSize="@dimen/setting_text_size" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maternal_filter_descr"
                android:textAllCaps="true"
                android:textSize="@dimen/setting_subtitle_text_size" />
        </LinearLayout>
        <Switch
            android:id="@+id/motherSideSetting"
            android:layout_width="@dimen/setting_switch_width"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_margin="@dimen/setting_item_margin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_item_height"
        android:gravity="center_vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male_events"
                android:textSize="@dimen/setting_text_size" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_events_based_on_gender"
                android:textAllCaps="true"
                android:textSize="@dimen/setting_subtitle_text_size" />
        </LinearLayout>
        <Switch
            android:id="@+id/maleEventSetting"
            android:layout_width="@dimen/setting_switch_width"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_margin="@dimen/setting_item_margin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_item_height"
        android:gravity="center_vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female_events"
                android:textSize="@dimen/setting_text_size" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_events_based_on_gender"
                android:textAllCaps="true"
                android:textSize="@dimen/setting_subtitle_text_size" />
        </LinearLayout>
        <Switch
            android:id="@+id/femaleEventSetting"
            android:layout_width="@dimen/setting_switch_width"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_margin="@dimen/setting_item_margin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_item_height"
        android:gravity="center_vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/setting_item_height"
            android:layout_alignParentStart="true"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:textSize="@dimen/setting_text_size" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/return_to_login_screen"
                android:textAllCaps="true"
                android:textSize="@dimen/setting_subtitle_text_size" />
        </LinearLayout>

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/logout"/>
    </RelativeLayout>

</LinearLayout>